# whatsexeced

./: AUTHORS  Makefile.am  NEWS  README  configure.ac  whatsexeced.c
m4/: optional_set_cflag.m4
